--- a/src/app/weather/weather.component.css
+++ b/src/app/weather/weather.component.css
@@ -1,13 +1,61 @@
 .container {
-    width: 100%;
-    height: 100%;
-    background-size: contain;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
     background-repeat: no-repeat;
-    border: 2px solid rgb(0, 0, 0);
+    background-position: center;
+    /* border: 2px solid black; */
 }
 
-.cards {
-    border: 2px solid rgb(0, 95, 220);
+.back {
+    width: 100%;
+}
+
+button {
+    float: left;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    margin: 10px;
+    padding: 10px 30px;
+    background: rgba(0, 0, 0, 0.2);
+    border: none;
+    border-radius: 6px;
+}
+
+button:hover {
+    background: rgba(0, 0, 0, 0.3);
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /* border: 2px solid black; */
+}
+
+.search form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 0 12px;
+    height: 100%;
+    border: none;
+    border-radius: 50px;
+    background: white;
+}
+
+.search input {
+    font-size: 16px;
+    width: 100%;
+    outline: none;
+    background: none;
+    border: none;
 }
 
 .card {
@@ -15,50 +63,75 @@
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
-    transition: 0.3s;
-    cursor: pointer;
-    width: 400px;
-    margin: 10px;
-    color: black;
-    background: white;
+    min-width: 400px;
+    margin-top: 20px;
+    color: white;
+    background: rgba(0, 0, 0, 0.3);
     box-shadow: 0px 6px 10px 0px rgba(62, 62, 62, 0.2);
-    border-radius: 8px;
-    border: 2px solid grey;
-}
-
-.card:hover {
-    box-shadow: 0 18px 26px 0 rgba(0, 0, 0, 0.564);
-}
-
-.temp {
-    font-size: 50px;
-    font-weight: 900;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.temperature {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100px;
-    margin-bottom: 20px;
+    border-radius: 20px;
     /* border: 2px solid grey; */
 }
 
-/* img {
+.card h1 {
+    text-align: center;
+    font-size: 40px;
+    margin: 20px 0 10px 0;
+    /* border: 2px solid red; */
+}
+
+.card img {
     width: 100%;
-    border-radius: 8px 8px 0 0;
-} */
+    margin: 0 auto;
+    /* border: 2px solid red; */
+}
+
+.temperature {
+    font-size: 50px;
+    font-weight: 900;
+    /* border: 2px solid red; */
+}
+
+.summary {
+    margin: 0;
+    font-size: 30px;
+    text-align: center;
+    /* border: 2px solid red; */
+}
 
 hr {
     width: 100%;
+    color: white;
 }
 
-.title {
-    width: 100%;
-    margin: 30px auto;
-    text-align: center;
+.details {
+    margin: 10px auto;
+    text-align: left;
     font-size: 22px;
     font-weight: bold;
     /* border: 2px solid black; */
+}
+
+.card form {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    /* border: 2px solid grey; */
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;    
+}
+
+.space {
+    margin-right: 30px;
+}
+
+.form-group input[type='radio'] {
+    accent-color: #059df5;
+    font-size: 30px;
+}
+
+.form-group label {
+    font-size: 30px;
 }
