--- a/src/app/weather-five-day/weather-five-day.component.css
+++ b/src/app/weather-five-day/weather-five-day.component.css
@@ -1,8 +1,76 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    /* border: 2px solid black; */
+}
+
+.back {
+    width: 100%;
+    max-width: 1500px;
+}
+
+button {
+    float: left;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    margin: 10px;
+    padding: 10px 30px;
+    background: rgba(0, 0, 0, 0.2);
+    border: none;
+    border-radius: 6px;
+}
+
+button:hover {
+    background: rgba(0, 0, 0, 0.3);
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: white;
+    /* border: 2px solid black; */
+}
+
+.search form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 0 12px;
+    height: 100%;
+    border: none;
+    border-radius: 50px;
+    background: white;
+}
+
+.search input {
+    font-size: 16px;
+    width: 100%;
+    outline: none;
+    background: none;
+    border: none;
+}
+
+.city {
+    padding: 10px 30px;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.3);
+}
 
 .cards {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 98vw;
+    max-width: 1480px;
     overflow-x: scroll;
     /* border: 2px solid black; */
 }
@@ -18,7 +86,7 @@
     padding: 10px;
     border-radius: 10px;
     /* border: 2px solid black; */
-    background:  rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.6);
 }
 
 .time {
