--- a/src/app/weather-five-day/weather-five-day.component.css
+++ b/src/app/weather-five-day/weather-five-day.component.css
@@ -69,6 +69,7 @@ button:hover {
 .cards {
     display: flex;
     flex-direction: row;
+    margin-top: 100px;
     width: 98vw;
     max-width: 1480px;
     overflow-x: scroll;
@@ -124,4 +125,16 @@ button:hover {
 
 .max-min {
     margin-top: 30px;
+}
+
+@media(max-width: 1040px) {
+    .cards {
+        margin-top: 50px;
+    }
+}
+
+@media(max-width: 550px) {
+    .cards {
+        margin-top: 10px;
+    }
 }
