--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -6,6 +6,7 @@
 
     <div class="content">
 
+        <!-- SEARCH BAR --------------------------------------------------------------------------------- -->
         <div class="search">
             <form #form="ngForm" (submit)="onSubmit()">
                 <input type="text" placeholder="Search City" name="city" [(ngModel)]="searchCity">
@@ -13,15 +14,21 @@
             </form>
         </div>
 
+        <!-- WAINTING FOR API RESPONSE ------------------------------------------------------------------ -->
+        <div class="waiting">
+            <h1 style="color: white" *ngIf="!myWeather.currentCity">Waiting...</h1>
+        </div>
 
+        <!-- C A R D ------------------------------------------------------------------------------------ -->
         <div class="card" *ngIf="myWeather.currentCity">
             <div>
                 <h1>{{myWeather.currentCity}}</h1>
 
-                <div class="heart" (click)="markAsFavorite()">
+                <div class="heart" (click)="setFavorite(myWeather)">
                     <img class="heart-svg" src="/assets/svgs/heart-fill-red.svg" alt="heart-fill-red.svg"
                         *ngIf="myWeather.favorite">
-                    <img class="heart-svg" src="/assets/svgs/heart-white.svg" alt="heart-white.svg" *ngIf="!myWeather.favorite">
+                    <img class="heart-svg" src="/assets/svgs/heart-white.svg" alt="heart-white.svg"
+                        *ngIf="!myWeather.favorite">
                 </div>
 
                 <div class="temperature">
@@ -53,25 +60,25 @@
             </form>
         </div>
 
+        <!-- HISTORY --------------------------------------------------------------------------------- -->
         <div class="bookmark" *ngIf="myWeather.currentCity">
 
             <div class="last-found">
                 <table>
                     <thead>
                         <tr>
-                            <th>History</th>
-                            <th colspan="5"></th>
-                            <th>
+                            <th colspan="5" style="text-align: left;">History</th>
+                            <th style="text-align: right;">
                                 <img class="close-svg" src="/assets/svgs/x-lg-white.svg" alt="x-lg-white"
                                     (click)="clearFavoritesList()">
                             </th>
                         </tr>
-                        <tr *ngIf="lastFoundItems.list.length<=0">
+                        <tr *ngIf="lastFoundList.list.length<=0">
                             <th colspan="8"> - - - empty list - - -</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let item of lastFoundItems.list; index as ind" (click)="getLastFound(item)">
+                        <tr *ngFor="let item of lastFoundList.list; index as ind" (click)="getLastFound(item)">
                             <td>{{ind+1}}</td>
                             <td>
                                 {{item.currentCity}}
@@ -95,27 +102,28 @@
 
             <div class="favorite-list">
                 <table>
-                    <tr>
-                        <th>Favorites</th>
-                    </tr>
-                    <tr *ngFor="let item of lastFoundItems.list; index as ind" (click)="getFavorites(item)">
-                        <td>{{ind+1}}</td>
-                        <td>
-                            {{item.currentCity}}
-                        </td>
-                        <td>
-                            {{item.temperature | number: "1.0-0"}}° C
-                        </td>
-                        <td>
-                            {{item.summary}}
-                        </td>
-                        <td>
-                            {{item.humidity}}%
-                        </td>
-                        <td>
-                            {{item.pressure}} hPa
-                        </td>
-                    </tr>
+                    <thead>
+                        <tr>
+                            <th colspan="3" style="text-align: left;">Favorites</th>
+                        </tr>
+                        <tr *ngIf="favoriteList.list.length<=0">
+                            <th colspan="4"> - - - empty list - - -</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of favoriteList.list; index as ind">
+                            <td (click)="getFavoriteCity(item)">{{ind+1}}</td>
+                            <td (click)="getFavoriteCity(item)">
+                                {{item.currentCity}}
+                            </td>
+                            <td (click)="getFavoriteCity(item)">
+                                {{item.temperature | number: "1.0-0"}}° C
+                            </td>
+                            <th style="text-align: right;" (click)="removeFavoriteCity(item)">
+                                <img class="close-svg" src="/assets/svgs/x-lg-white.svg" alt="x-lg-white">
+                            </th>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
 
