--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,55 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    box-sizing: border-box;
+}
+
 html,
 body {
+    width: 100%;
     height: 100%;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
     background: rgb(242, 242, 247);
 }
 
-body {
-    margin: 0;
-    /* font-family: Roboto, "Helvetica Neue", sans-serif;  */
+.my-container {
+    width: 100%;
+    cursor: default;
+    /* border: 2px solid black; */
+}
+
+.my-content {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 1500px;
+    min-height: 70vh;
+    cursor: default;
+    /* border: 2px solid black; */
+}
+
+a {
+    display: block;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    /* border: 1px solid red; */
+}
+
+@media(max-width: 1530px) {
+    .my-content {
+        width: 1200px;
+    }
+}
+
+@media(max-width: 1260px) {
+    .my-content {
+        width: 1000px;
+    }
+}
+
+@media(max-width: 1020px) {
+    .my-content {
+        width: 100%;
+        padding: 0 14px;
+    }
 }
