--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,11 @@ body {
     height: 100%;
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    background: rgb(242, 242, 247);
+    background-image: url('/assets/images/day.jpg');
+    /* background: rgb(242, 242, 247); */
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* background-position: center; */
 }
 
 .my-container {
@@ -53,5 +57,13 @@ a {
         padding: 0 14px;
     }
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
